make some changes in html and css

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>
       <div class="box-main">
         <div class="firstHalf">
-          <p class="text-big">The Future of Education is here</p>
+          <p class="text-big">"Education is the most powerful weapon which you can use to change the world"</p>
           <p class="text-small">
             In this world of 7 billion people we are here to eduacate the
             children to educate the whole world and to provide the best
