--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <nav class="navbar background">
-      <div class="logo"><img src="images/img.jpg" alt="logo" /></div>
+      <div class="logo"><img src="assets/images/img.jpg" alt="logo" /></div>
     
       <ul class="nav-list another">
         <li><a href="#home"> Home </a></li>
@@ -47,7 +47,7 @@
           </div>
         </div>
         <div class="secondHalf">
-            <img src="images/img.jpg" alt="">
+            <img src="assets/images/img.jpg" alt="">
         </div>
       </div>
      
@@ -63,7 +63,7 @@
       </div>
   
       <div class="thumbnail">
-        <img src="images/img.jpg" alt="laptop Image" class="Img-fluid">
+        <img src="assets/images/img.jpg" alt="laptop Image" class="Img-fluid">
       </div>
     </section>
 
@@ -77,7 +77,7 @@
       </div>
   
       <div class="thumbnail">
-        <img src="images/img.jpg" alt="laptop Image" class="Img-fluid">
+        <img src="assets/images/img.jpg" alt="laptop Image" class="Img-fluid">
       </div>
     </section>
 
@@ -90,7 +90,7 @@
       </div>
   
       <div class="thumbnail">
-        <img src="images/img.jpg" alt="laptop Image" class="Img-fluid">
+        <img src="assets/images/img.jpg" alt="laptop Image" class="Img-fluid">
       </div>
     </section>
 
