some changes in html and css

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <ul class="nav-list another">
         <li><a href="#home"> Home </a></li>
         <li><a href="#about"> About </a></li>
-        <li><a href="#services"> Services </a></li>
-        <li><a href="#Contact"> Contact us </a></li>
+        <li><a href="#contact"> Services </a></li>
+        <li><a href="#contact"> Contact us </a></li>
       </ul>
       <div class="rightNav">
         <input type="text" name="search" id="search" placeholder="Search"/>
@@ -28,7 +28,7 @@
       </div>
     </nav>
 
-    <section class="background firstSection">
+    <section class="background firstSection" id="home">
       <div class="mode">
         <i class="fa-solid fa-sun"></i>
         <strong>Mode</strong>
@@ -53,7 +53,7 @@
      
     </section>
 
-    <section class="section">
+    <section class="section" id="about">
       <div class="paras">
         <p class="sectionTag text-big">The Power of Project-Based Learning: Fostering Critical Thinking in Students</p>
         <p class="sectionSubTag text-small">
@@ -94,7 +94,7 @@
       </div>
     </section>
 
-    <section class="contact">
+    <section class="contact" id="contact">
       <h2 class="text-center">Contact us</h2>
       <div class="form">
         <input class="form-input input-focus" type="text" name="name" id="name" placeholder="Enter Your Name">
